added some colors

--- a/HTML_CSS_Javascript/Assignments/module_3/css/styles.css
+++ b/HTML_CSS_Javascript/Assignments/module_3/css/styles.css
@@ -10,3 +10,21 @@
 	font-size: 1.75em;
 	font-weight: bold;
 }
+#header-nav {
+  background-color: #f6b319;
+}
+.navbar-default .navbar-brand {
+ 	color: #337ab7;
+}
+.site-brand a {
+  font-family: 'Lora', serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+body {
+	background-color: #61122f;
+	color: #fff;
+}
